# cirnosay

./: .gitignore  CMakeLists.txt  Makefile  README.md  configure  download_pictures.sh
data/: defaults
pictures/: .gitignore  genmake.sh
src/: .gitignore  CMakeLists.txt  Makefile  char.cpp  char.h  cirnosay.cpp  color.cpp  color.h  config.h.in  findfile.cpp  findfile.h  out.cpp  out.h  palette.cpp  palette.h  picture.cpp  picture.h  rgba.cpp  rgba.h  utils.cpp  utils.h
src/canvas/: border.cpp  border.h  border_simple.cpp  border_simple.h  canvas.h  compose.cpp  compose.h  picture.cpp  picture.h  text.cpp  text.h
